--- a/client/src/assets/paymentModal.css
+++ b/client/src/assets/paymentModal.css
@@ -1,3 +1,15 @@
+:root{
+  --background-color:#fff;
+  --shadow-color:rgba(0, 0, 0, .5);
+  --text:#000;
+}
+
+:root .dark{
+  --background-color:hsl(201, 81%, 12%);
+  --shadow-color:rgba(0, 0, 0, .5);
+  --text:#fff;
+}
+
 .paymentModal-mask.big {
   position: fixed;
   z-index: 9998;
@@ -5,7 +17,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: var(--shadow-color);
   display: table;
   transition: opacity .3s ease;
 }
@@ -19,7 +31,7 @@
   width: 600px;
   margin: 0px auto;
   padding: 20px 30px;
-  background-color: #fff;
+  background-color: var(--background-color);
   border-radius: 2px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
   transition: all .3s ease;
@@ -28,7 +40,7 @@
 
 .paymentModal-header.big h1 {
   margin-top: 0;
-  color: #000000;
+  color: var(--text);
 }
 
 .paymentModal-body.big {
